--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
      <h1>I'm a header 1!</h1>
-      <img>https://1drv.ms/u/s!AiPgngSGmDBXggPDVKmjv1jbOeBc?e=8W0SmR</img>
+      <img src="https://1drv.ms/u/s!AiPgngSGmDBXggPDVKmjv1jbOeBc?e=8W0SmR">
     Hello there, awesome person! 
   </body>
 
