--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
      <h1>I'm a header 1!</h1>
       <img src="https://1drv.ms/u/s!AiPgngSGmDBXggPDVKmjv1jbOeBc?e=8W0SmR">
-    Hello there, awesome person! 
+<img src="https://avatars3.githubusercontent.com/u/48123602?v=4">
+
   </body>
 
 </html>
