--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <img src="https://avatars3.githubusercontent.com/u/48123602?v=4">
       <ul>
     <li>Cacti</li>
+          <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <li>Cez</li>
     <li>Billing</li>
      <li>Mail</li>
