--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
+<link rel="stylesheet" href="style.css">
   <body>
      <h1>I'm a header 1!</h1>
       <img src="https://1drv.ms/u/s!AiPgngSGmDBXggPDVKmjv1jbOeBc?e=8W0SmR">
